--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@arco-design/web-react": "^2.0.0",
         "@icon-park/react": "^1.0.0",
+        "ahooks": "^3.7.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.0.0"
